# kanon

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  conftest.py  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
docs/: conf.py  examples.rst  index.rst
docs/calendars/: index.rst
docs/histropy/: index.rst  tables.rst  units.rst
docs/kanon/: index.rst  units.rst
docs/kanon/tables/: htable.rst  index.rst  symmetries.rst
docs/kanon/units/: index.rst  radices.rst
docs/tables/: htable.rst  index.rst  interpolations.rst  symmetries.rst
docs/units/: index.rst  precision.rst
examples/: declination.ipynb  ptolemy_viz.ipynb  sun_true_position.ipynb
examples/tests/: test_notebooks.py
histropy/: _astropy_init.py  conftest.py
histropy/tables/: __init__.py  htable.py  interpolations.py  symmetries.py
histropy/tables/tests/: test_htable.py  test_symmetries.py
histropy/tables/tests/data/: table_content-180.json
histropy/tests/data/: table_content-180.json
histropy/units/: __init__.py  errors.py  precision.py  radices.py
histropy/units/tests/: test_precision.py  test_quantity.py  test_radices.py  test_radixbase.py
histropy/utils/: list_to_tuple.py  types_helper.py
histropy/utils/types/: dishas.py
kanon/: __init__.py  _astropy_init.py  conftest.py  version.py
kanon/calendars/: __init__.py  calendars.py
kanon/calendars/tests/: test_calendars.py
kanon/models/: __init__.py  meta.py  models.py  table_types.py  utils.py
kanon/models/tests/: test_meta.py  test_models.py
kanon/tables/: __init__.py  hcolumn.py  htable.py  htable_reader.py  interpolations.py  symmetries.py
kanon/tables/tests/: test_hcolumn.py  test_htable.py  test_htable_reader.py  test_interpolations.py  test_symmetries.py
kanon/tests/: conftest.py  test_based_htable.py
kanon/tests/data/: table_content-180.json  table_content-287.json
kanon/units/: __init__.py  calendars.py  definitions.py  errors.py  precision.py  radices.py
kanon/units/tests/: test_basedreal.py  test_calendars.py  test_precision.py  test_quantity.py  test_radixbase.py
kanon/utils/: __init__.py  list_to_tuple.py  looping_list.py
kanon/utils/types/: dishas.py  number_types.py
licenses/: LICENSE.rst
