[tool.poetry]
authors = ["Léni Gauffier <lenigauffier@gmail.com>"]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Sociology :: History",
]
description = "History of astronomy library"
exclude = ["kanon/**/tests/**/*"]
homepage = "https://dishas.obspm.fr"
keywords = ["astronomy", "history", "arithmetic", "calendars", "ptolemy", "sexagesimal"]
license = "BSD-3-Clause"
name = "kanon"
packages = [
  {include = "kanon"},
]
readme = "README.rst"
repository = "https://github.com/legau/kanon"
version = "0.0.0"

[docs.metadata]
edit_on_github = "True"
github_project = "legau/kanon"
long_description = "file: README.rst"
long_description_content_type = "text/x-rst"

[tool.poetry.dependencies]
astropy = "^5.0"
ipykernel = {version = "^6.6.1", optional = true}
ipython = {version = "^8.0.0", optional = true}
matplotlib = "^3.5.1"
nbformat = {version = "^5.1.3", optional = true}
nbsphinx = {version = "^0.8.8", optional = true}
numpy = "^1.22.0"
pandas = "^1.3.5"
papermill = {version = "^2.3.3", optional = true}
python = "^3.8"
requests = "^2.27.1"
scipy = {version = "^1.7.3", python = ">=3.8,<3.11"}
sphinx-astropy = {version = "^1.7.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
pytest-astropy = "^0.9.0"
requests-mock = "^1.9.3"
tox = "^3.24.5"
types-requests = "^2.27.6"

[tool.poetry.extras]
docs = ["sphinx-astropy", "nbsphinx", "ipython", "sphinx-rtd-theme", "ipykernel", "papermill"]
notebook = ["ipython", "ipykernel", "papermill", "nbformat"]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.pytest.ini_options]
addopts = "-p \"no:hypothesispytest\""
astropy_header = true
doctest_plus = "enabled"
filterwarnings = ["ignore:numpy.ndarray size changed:RuntimeWarning"]
testpaths = ["kanon", "docs", "examples"]
text_file_format = "rst"

[tool.coverage.run]
omit = ["**/tests/*", "*/kanon/version*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "pragma: py{ignore_python_version}",
  '\.\.\.$',
]

[tool.coverage.paths]
source = [
  "kanon",
  "*/.tox/*/lib/python*/site-packages/kanon",
  "*/kanon",
]

[tool.mypy]
files = ["kanon"]

[[tool.mypy.overrides]]
module = [
    'astropy.*',
    'requests_mock.*',
    'pandas.*',
    'setuptools_scm.*',
    'scipy.*',
    'matplotlib.*',
]
ignore_missing_imports = true
