[options.entry_points]
hypothesis =
    _ = kanon.conftest:_hypothesis_sexagesimal_strategy
console_scripts =

[options.package_data]
kanon =
    py.typed


[tool:pytest]
testpaths = "kanon" "docs" "examples"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = -p "no:hypothesispytest"
filterwarnings =
    ignore:numpy.ndarray size changed:RuntimeWarning

[coverage:run]
omit =
    kanon/_astropy_init*
    kanon/conftest.py
    kanon/*setup_package*
    kanon/tests/*
    kanon/*/tests/*
    kanon/extern/*
    kanon/version*
    */kanon/_astropy_init*
    */kanon/conftest.py
    */kanon/*setup_package*
    */kanon/tests/*
    */kanon/*/tests/*
    */kanon/extern/*
    */kanon/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
    # Ellipsis ...
    \.\.\.$
